--- a/RankFit/Exercise/Exercise.storyboard
+++ b/RankFit/Exercise/Exercise.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Byj-f1-lcv">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Exercise View Controller-->
+        <!--Exercise-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
                 <viewController storyboardIdentifier="ExerciseViewController" id="Y6W-OH-hqX" customClass="ExerciseViewController" customModule="RankFit" customModuleProvider="target" sceneMemberID="viewController">
@@ -49,9 +49,13 @@
                                         <color key="value" systemColor="systemGreenColor"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Y6W-OH-hqX" id="CTz-FD-p8p"/>
+                                    <outlet property="delegate" destination="Y6W-OH-hqX" id="sxa-Eg-3B5"/>
+                                </connections>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ffR-c2-MTd">
-                                <rect key="frame" x="0.0" y="271" width="390" height="539"/>
+                                <rect key="frame" x="0.0" y="271" width="390" height="490"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vdK-Oe-RWI">
                                     <size key="itemSize" width="390" height="140"/>
@@ -90,6 +94,7 @@
                                                                         <imageReference key="image" image="trash" catalog="system" renderingMode="original"/>
                                                                     </state>
                                                                     <connections>
+                                                                        <action selector="removeBtn:" destination="c22-Y1-bF9" eventType="touchUpInside" id="2KT-js-raX"/>
                                                                         <action selector="removeBtnTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="OvR-40-o1w"/>
                                                                     </connections>
                                                                 </button>
@@ -225,6 +230,17 @@
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="390" height="140"/>
+                                        <connections>
+                                            <outlet property="exerciseNameLabel" destination="1gx-C7-dgE" id="P3t-uy-4dC"/>
+                                            <outlet property="label1" destination="kdJ-bV-l4o" id="hxL-wy-r5z"/>
+                                            <outlet property="label1_num" destination="AJS-aQ-1sM" id="2rv-ep-W0C"/>
+                                            <outlet property="label2" destination="Gzq-7O-wTb" id="dKw-Fz-4kU"/>
+                                            <outlet property="label2_num" destination="5FI-Tr-g6m" id="5lM-Ar-Cbx"/>
+                                            <outlet property="label3" destination="58D-w5-LNt" id="2Yn-ZK-Rsk"/>
+                                            <outlet property="label3_num" destination="Z6u-G1-pCD" id="O7L-PW-mcu"/>
+                                            <outlet property="startBtn" destination="0IH-2R-Yrn" id="S7Z-O1-R4N"/>
+                                            <outlet property="stateLabel" destination="mZp-Ng-PZG" id="hKK-LJ-GuD"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -241,7 +257,9 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="ffR-c2-MTd" secondAttribute="bottom" id="aZx-O5-2Sz"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Exercise" image="alarm" catalog="system" id="juh-Es-WL2"/>
                     <navigationItem key="navigationItem" id="7ld-nm-wbB"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="calendarView" destination="ONx-Jk-cHM" id="fxU-xa-heN"/>
                         <outlet property="collectionView" destination="ffR-c2-MTd" id="WRP-GX-34Z"/>
@@ -249,13 +267,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1060" y="-34.123222748815166"/>
+            <point key="canvasLocation" x="918" y="-34"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="gzl-I7-X3D">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Byj-f1-lcv" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="initialExercise" automaticallyAdjustsScrollViewInsets="NO" id="Byj-f1-lcv" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="GVs-Fk-LlQ">
                         <rect key="frame" x="0.0" y="47" width="390" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -271,6 +290,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="alarm" catalog="system" width="123" height="128"/>
         <image name="trash" catalog="system" width="117" height="128"/>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
